p2/confs/examplefs.yml
apiVersion: v1
kind: Service

metadata:
    name: nginx-service
    annotations:
        metallb.universe.tf/allow-shared-ip: loadbl
spec:
    type: LoadBalancer
    selector:
        app: nginx
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
          name: http
        - port: 443
          targetPort: 443
          protocol: TCP
          name: https
        - port: 22
          targetPort: 22
          name: ssh
---
apiVersion: apps/v1
kind: Deployment

metadata:
    name: nginx-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
                - name: image-nginx
                  image: image-nginx
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 80
                      - containerPort: 443
                      - containerPort: 22
                  livenessProbe:
                      exec:
                          command:
                              - sh
                              - /test.sh
                      initialDelaySeconds: 5
                      periodSeconds: 30
